--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -13,3 +13,10 @@ body{
 img{
     max-width: 100%;
 }
+input,
+select{
+    outline: none;
+    &:focus{
+       background-color: rgba(#1ed760, .8);
+    }
+}
